# DEBUG_profiler

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py
inc/: Assert.hpp  DEBUG.hpp  Debug_internal.hpp  Log_macro.hpp  Logger.hpp  Logger_info.hpp  PROFILE.hpp  config.hpp
inc/FORMATTER/: Formatter.hpp  ansi.hpp  color_formatter.hpp  colors.hpp  icons.hpp  nocolor_formatter.hpp  util.hpp
inc/STREAM/: File_stream.hpp  STREAM.hpp  Win_console_stream.hpp  linux_console_stream.hpp
src/: Logger.cpp
src/FORMATTER/: color_formatter.cpp  nocolor_formatter.cpp
src/STREAM/: File_stream.cpp  STREAM.cpp  Win_console_stream.cpp  linux_console_stream.cpp
test/: main.cpp
tests/: feature_test.cpp
